# kube-mcp-server

./: Dockerfile  LICENSE  README.md  kubectl_mcp-server.py  pyproject.toml  requirements-dev.txt  requirements.txt
